--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@imagekit/react": "^5.0.1",
     "@reduxjs/toolkit": "^2.7.0",
     "@tailwindcss/vite": "^4.1.4",
     "antd": "^5.24.7",
     "axios": "^1.8.4",
     "axois": "^0.0.1-security",
+    "framer-motion": "^12.15.0",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -25,6 +28,7 @@
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "scss": "^0.2.4",
+    "swiper": "^11.2.8",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
