--- a/package.json
+++ b/package.json
@@ -13,11 +13,24 @@
     "@imagekit/react": "^5.0.1",
     "@reduxjs/toolkit": "^2.7.0",
     "@tailwindcss/vite": "^4.1.4",
+    "@tiptap/extension-bullet-list": "^2.13.0",
+    "@tiptap/extension-color": "^2.13.0",
+    "@tiptap/extension-heading": "^2.13.0",
+    "@tiptap/extension-highlight": "^2.13.0",
+    "@tiptap/extension-link": "^2.13.0",
+    "@tiptap/extension-ordered-list": "^2.13.0",
+    "@tiptap/extension-text-align": "^2.13.0",
+    "@tiptap/extension-underline": "^2.13.0",
+    "@tiptap/react": "^2.13.0",
+    "@tiptap/starter-kit": "^2.13.0",
     "antd": "^5.24.7",
     "axios": "^1.8.4",
     "axois": "^0.0.1-security",
+    "dayjs": "^1.11.13",
     "framer-motion": "^12.15.0",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.513.0",
+    "quill": "^2.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
